# Tencent-XR-3DGen

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
character/main/: .gitignore
character/phy_cage/: README.md  requirements.txt
data/main_data_pipeline/: .gitignore  exr_parser.py  fix_transparency.py  generate_cameras.py  generate_mesh_json.py  generate_mesh_list.py  generate_thumbnail.py  process_bake.py  process_conversion.py  process_mesh_info.py  process_pmx.py  process_remesh.py  process_remove_mesh.py  process_standard_conflatio_data.py  process_standard_data.py  process_standard_layer_data.py  process_uv_transfer.py  process_verification.py  readme.md  render_by_cmd.py  render_color_depth_normal_helper.py  render_mesh_batch.py  render_one_mesh.py  simple_batch_job.py  standard_layer_data_transformation.py
data/openvdb_interface/: README.md  pyvdb.py
geometry/am_generation/: .gitignore  README.md  requirements.txt  train.py
geometry/isosurface/: README.md  sparse_marching_cubes.py
geometry/neusdfusion/: requirements.txt
misc/quad_remesh/: README.md  blender_service.py  check_cos_mount.py  quad_converter.py  quad_remesh_and_bake.py  quad_remesh_and_bake_test.py  quad_to_tri.py  requirements.txt  test_local.sh
misc/raft_stereo/: config.json  demo.py  demo_ziyou.py  demo_ziyou_pliang.py  modelToOnnx_float.py  onnx_infer.py  onnx_simplify.py  train_stereo.py
misc/texture_utils/: README.md  main_tex_frontal.py  pipeline_interface.py  run_in_image.sh  (+1 more)
misc/vstool/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  readme.txt
(+1107 files in other folders)
